2003-08-20  Raymond Penners <raymond@dotsphinx.com>

	* src/Theme/gtk-2.0/gtkrc: Disabled the colored, alternating
	rules for GtkTreeViews to match the Windows behaviour.

	* */Makefile.msc: Provided MS-VC++ make files.
	
	* src/xp_theme.c: The open/close tree expander symbols were
	accidentally switched. Fixed.

2003-08-11  Raymond Penners <raymond@dotsphinx.com>

	* src/wimp_style.c: The menu background color now follows XP's
	color scheme.

2003-08-07  Raymond Penners <raymond@dotsphinx.com>

	* === Released 0.2.0 ===

2003-08-06  Raymond Penners <raymond@dotsphinx.com>

	* src/*.c: Added XP theming support for progress bars.

2003-08-05  Raymond Penners <raymond@dotsphinx.com>

	* src/xp_theme.c: Internal redesign: extracted XP specific theming
	from wimp_style.c, improved code.

	* src/wimp_style.c: Added XP theming support for list headers, and
	entry widgets.

2003-08-03  Raymond Penners <raymond@dotsphinx.com>

	* src/wimp_style.c: Improved system color handling, added XP
	theming support for option menus.

2003-04-15  Raymond Penners  <raymond@dotsphinx.com>

	* src/wimp_style.c: Tabs not located on top of the notebook are
	not rendered properly using XP theming. Added fallback to non-XP
	theming behaviour if the tabs are not located on top (to be
	removed when full notebook support is in).

2003-04-15  Arnaud Charlet  <charlet@ACT-Europe.FR>

	* src/wimp_style.c: Add handling of expander. Fix colors for combo
	box items. Add native rendering of radio buttons. Fix handling of
	default buttons. Add native rendering of tree expanders.

2003-03-18  Raymond Penners  <raymond@dotsphinx.com>

	* === Released 0.1.0 ===
	