@@ -1,3 +1,8 @@
+2003-08-23  Raymond Penners <raymond@dotsphinx.com>
+
+	* src/*.c: Merged Dom Lachowicz's patches, now tooltips nicely
+	adhere to the system colors as well.
+
 2003-08-20  Raymond Penners <raymond@dotsphinx.com>
 
 	* src/Theme/gtk-2.0/gtkrc: Disabled the colored, alternating
